[package]
name = "dhcp4r"
version = "0.1.0"
authors = ["Richard Warburton <richard@warburton.it>"]
description = "IPv4 DHCP library with working server example."

# These URLs point to more information about the repository.
#documentation = "..."
#homepage = "..."
repository = "https://github.com/krolaw/dhcp4r"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
# readme = "..."
keywords = ["dhcp", "server", "monitor", "client"]
license = "BSD-3-Clause"

[dependencies]
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
time = "0.1"
